# AdvanceDB

./: .gitignore  CMakeLists.txt  README_BUILD.md  SLOT_MEMORY_EXPLANATION.md  STORAGE_ENGINE.md  build.bat  build.ps1  compile_btree_test.bat  compile_btree_test.sh  compile_buffer_pool_test.bat  compile_storage_engine_test.bat  compile_storage_engine_test.sh  database.db
data/: test_btree_basic.db  test_btree_delete.db  test_btree_email.db  test_btree_empty.db  test_btree_large_split.db  test_btree_many.db  test_btree_merge.db  test_btree_normal_split.db  test_btree_reverse.db
examples/: storage_engine_usage.cpp
include/analyser/: analyser.h
include/common/: constants.hpp
include/network/: connection.h  protocol.h  select_server.h  tcp_client.h  tcp_server.h
include/orchestrator/: orchestrator.h
include/parser/statements/: create.h  delete.h  insert.h  select.h  statement.h  update.h
include/storage/: btree.hpp  buffer_pool.hpp  disk_manager.hpp  page.hpp  table_handle.hpp
include/storage/interface/: storage_engine.hpp
include/storage/relational/: catalog.hpp  row_codec.hpp
include/storage_new/: catalog_manager.h  db_manager.h  schema_serializer.h  storage.h  storage_manager.h  transaction.h  transaction_manager.h
include/storage_new/page/: page.h
project/parser/: main.cpp  parser.cpp  statements.cpp  statements.h
src/: main.cpp
src/analyser/: analyser.cpp
src/client/: main.cpp
src/network/: select_server.cpp  tcp_client.cpp  tcp_server.cpp  winsock_utils.cpp
src/orchestrator/: orchestrator.cpp
src/parser/: parser.cpp  statements.cpp
src/parser/statements/: use.h
src/server/: main.cpp
src/storage/: disk_manager.cpp  page.cpp  record.cpp  slot_helpers.cpp  table.cpp
src/storage/btree/: btree.cpp  helpers.cpp  internal.cpp  leaf.cpp
src/storage/interface/: storage_engine.cpp
src/storage/relational/: catalog.cpp  row_codec.cpp
src/storage_new/: catalog_manager.cpp  db_manager.cpp  schema_serializer.cpp  storage.cpp  storage_manager.cpp  transaction_manager.cpp
tests/page/: page_allocation.cpp  page_insert.cpp  validation.cpp
tests/storage/: buffer_pool_test.cpp  relational_engine_test.cpp  storage_engine_test.cpp
tests/storage/btree_test/: btree_test.cpp
